Flowmini/flowmini_v21_structural_bridge/examples/fail/bad_abi_pointer_direct_declare.flow
import "../std/abi/pointers.flow"

module bad_abi_pointer_direct_declare

main {
    buf : c_buffer_read(0)
    print 0
}
